Updated some spelling errors and added links to go back to the homepage

--- a/recipes/ice-tea.html
+++ b/recipes/ice-tea.html
@@ -10,6 +10,7 @@
     <body>
         <h1>Ice Tea</h1>
         <img src="../food-photos/iced-tea-top-photo.jpeg" alt="Crispy Ice Tea that I juiced this morning">
+        <p><small><a href="../index.html">Homepage</a></small></p>
         <h2>Description</h2>
         <p>
             This is the ice tea that I almost sometimes make. I wanted to practice making list pages one more time so I'm really reaching
