--- a/recipes/layer-potatoes.html
+++ b/recipes/layer-potatoes.html
@@ -10,6 +10,7 @@
     <body>
         <h1>Food</h1>
         <img src="../food-photos/layer-potatoes-top-image.jpeg" alt="Oven dish of layer potatoes that I totally made this morning">
+        <p><small><a href="../index.html">Homepage</a></small></p>
         <h2>Description</h2>
         <p>
             This is a recipie for layer potatoes. Actually, let me rephrase - this is THE recipie for layer potatoes. Best thing 
