--- a/recipes/raspberry-pie.html
+++ b/recipes/raspberry-pie.html
@@ -10,9 +10,10 @@
     <body>
         <h1>Raspberry Pie</h1>
         <img src="../food-photos/raspberry-top-image.jpeg" alt="Photo of 100% legit pie">
+        <p><small><a href="../index.html">Homepage</a></small></p>
         <h2>Description</h2>
         <p>This is a raspberry pie. It will probably taste like raspberries and sugar and butter. It is ok.
-            Personally, I think pecan is better but this is a practice run so I guess is raspberries. I hate the way 
+            Personally, I think pecan is better but this is a practice run so I guess we're doing raspberries. I hate the way 
             the word is spelled though - just say <strong>rasberry</strong> good god. 
         </p>
         <p>Oh shoot I was supposed to describe the recipe for some reason. You're probably gonna need ovens, butter, 
