deleted and rewrote code to ensure I knew what was up

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
     <head>
-        <title>Odin Recipes</title>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
+        <title>Recipe Directory</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipies</h1>
+        <p>Aight we doing this shit one last time. This is mainly
+            practice to get some more coding done but the endgoal
+            is still fullstack.
+        </p>
+        <p>The recipes are as follows:</p>
         <ul>
-            <li><a href="recipes/raspberry-pie.html">Raspberry Pie</a></li>
-            <li><a href="recipes/layer-potatoes.html">Layer Potatoes</a></li>
-            <li><a href="recipes/ice-tea.html">Ice Tea</a></li>
+            <li><a href="pages/iced-tea.html">Iced Tea</a></li>
+            <li><a href="pages/raspberry-pie.html">Raspberry Pie</a></li>
+            <li><a href="pages/layer-potatoes.html">Layer Potatoes</a></li>
         </ul>
     </body>
-
 </html>
